--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -7,13 +7,13 @@ plugin:
 
     widgets:
         - name: formalibre_announcer_widget
-          is_configurable: true
+          is_configurable: false
           is_displayable_in_workspace: false
           is_displayable_in_desktop: true
           default_width: 12
           default_height: 4
         - name: formalibre_seeker_widget
-          is_configurable: true
+          is_configurable: false
           is_displayable_in_workspace: false
           is_displayable_in_desktop: true
           default_width: 12
