--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -14,3 +14,7 @@ plugin:
           is_configurable: false
           is_displayable_in_workspace: false
           is_displayable_in_desktop: true
+        - name: formalibre_admin_widget
+          is_configurable: false
+          is_displayable_in_workspace: false
+          is_displayable_in_desktop: true
